02-cluster/samples/ingress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-express-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: eks-express-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
   # alb.ingress.kubernetes.io/subnets: subnet-0df6b51841216f80e,subnet-0a1691a88a4d1be45
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 443}]'
    external-dns.alpha.kubernetes.io/hostname: eks.express.com
  # alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - eks.express.com
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
